- ARES XML to ContactDto/JSON converter working via /rest/register/lookupAres/{ico} - jetty automatic reload working via MAVEN_OPTS upgrade for higher memory allowance - universal POJO to JSON Result working for the REST interface